<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CatLibLandingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Load the toolbar here -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/left_arrow"
                app:title="@string/cat_list" />

        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/switchContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBarLayout"
            android:orientation="horizontal"
            android:visibility="gone"
            android:elevation="@dimen/dimens_8dp"
            android:background="@drawable/custom_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp"
                android:layout_marginStart="@dimen/dimens_16dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginStart="@dimen/dimens_16dp"
                android:layout_marginEnd="@dimen/dimens_16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid"
                android:textSize="@dimen/dimens_16sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catListRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switchContainer"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>
</layout>