<resources>
    <string name="app_name">Cat Gallery</string>
    <string name="launch_cat_journey">Choose image</string>
</resources>